[package]
name = "any-arena"
version = "0.1.0"
authors = ["Patrick Chieppe <patrick.chieppe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.6"
traitcast = "0.5.0"
inventory = "0.1.4"
traitcast_core = "0.2.0"
